--- a/client/src/views/service.html
+++ b/client/src/views/service.html
@@ -1,1 +1,4 @@
-<h2>View Service {{service}}</h2>
+<style>body { background: white; }</style>
+<div class="container">
+  <h2>View Service {{service}}</h2>  
+</div>
