--- a/client/src/theme/sass/style.scss
+++ b/client/src/theme/sass/style.scss
@@ -1,3 +1,20 @@
+@import "../../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+
 body {
-  background: #EEE;
+  background: rgb(241,241,241);
+}
+
+.panel-default > .panel-heading {
+  text-transform: uppercase;
+  padding: 20px;
+  background: rgb(40, 44, 53);
+  color: white;
+}
+
+footer {
+  font-weight: 300;
+  font-size: 12px;
+  background-color: rgb(46,50,62);
+  color: white;
+  padding: 30px;
 }
