--- a/client/src/views/service.html
+++ b/client/src/views/service.html
@@ -1,48 +1,39 @@
 <div class="container">
 
-<a href="#" class="overlay-close" aria-label="Fechar" ui-sref="dashboard"></a>
+  <a href="#" class="overlay-close" aria-label="Fechar" ui-sref="dashboard"></a>
 
-<div class="row">
-  <div class="col-lg-12">
-    <header class="service">
-      <div class="header-main-content">
-        <h1>{{ service.slug | translate }}</h1>
-        <div class="breadcrumbs">
-          <a href="#" class="breadcrumb">Self Service</a>
-          <a href="#" class="breadcrumb">{{ service.slug | translate }}</a>
+  <div class="row">
+    <div class="col-lg-12">
+      <header class="service">
+        <div class="header-main-content">
+          <h1>{{ service.slug | translate }}</h1>
+          <div class="breadcrumbs">
+            <a href="#" class="breadcrumb">Self Service</a>
+            <a href="#" class="breadcrumb">{{ service.slug | translate }}</a>
+          </div>
         </div>
-      </div>
-      <div class="service-main-actions">
-        <!-- Checkbox -->
-        <div class="toggle ">
-          <input type="checkbox" value="None" id="checkbox" name="check">
-          <label for="checkbox"></label>
-          <span class="status active">{{ 'active' | translate }}</span>
-          <span class="status pending">{{ 'pending' | translate }}</span>
-          <span class="status activate">{{ 'activate' | translate }}</span>
-          <span class="working">
-            <i></i>
-            <i></i>
-            <i></i>
-          </span>
+        <div class="service-main-actions">
+          <!-- Checkbox -->
+          <div class="toggle" ng-class="{ active: service.status === 'active' }" ng-click="toggleServiceState()">
+            <input type="checkbox" ng-checked="service.status === 'active'" value="None" id="checkbox" name="check">
+            <label for="checkbox"></label>
+            <span class="status active">{{ 'active' | translate }}</span>
+            <span class="status pending">{{ 'pending' | translate }}</span>
+            <span class="status activate">{{ 'activate' | translate }}</span>
+            <span class="working">
+              <i></i>
+              <i></i>
+              <i></i>
+            </span>
+          </div>
+          <!-- End -->
         </div>
-        <!-- End -->
-      </div>
-    </header>
+      </header>
+    </div>
   </div>
-</div>
 
 
-<div class="row service-option">
-  <div class="col-lg-12">
-    <h2>Personalizar endereço de email</h2>
-    <p>
-      O seu endereço de email atual é <strong>tiagoalexandrelopes@tecnico.ulisboa.pt</strong>. Se quiser pode personalizar o seu endereço.
-    </p>
-    <button type="button" class="btn btn-default">Personalizar endereço</button>
-  </div>
-</div>
-
+  <ng-include src="'views/services/'+service.slug+'.html'"></ng-include> 
 
 
 </div>
