--- a/client/src/views/services/database.html
+++ b/client/src/views/services/database.html
@@ -1,1 +1,9 @@
-THIS IS DATABASE FORM
+<div class="row service-option">
+  <div class="col-lg-12" ng-show="showForm">
+    <h2>Definir nome da base de dados</h2>
+    <p>
+      <input type="text" name="" />
+    </p>
+    <button type="button" class="btn btn-default">Ativar</button>
+  </div>
+</div>
