--- a/client/src/views/services/wifi.html
+++ b/client/src/views/services/wifi.html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
     <h2>As tuas credênciais de acesso para o Wifi são:</h2>
     <p>
-      As mesmas que o fénix!
+      As mesmas que o fénix! {{message}}
     </p>
     <button type="button" class="btn btn-default">Personalizar</button>
   </div>
